# magpie-tts.cpp

./: .gitignore  CODEC_ARCHITECTURE.md  GGML_INIT_OUTLINE.md  MAGPIE_ARCHITECTURE.md  Makefile  README.md  STATUS.md  inspect_inference.py  pyproject.toml
docs/: GGML_PORT_PLAN.md  MAGPIE_INFERENCE_FINDINGS.md  STATUS.md
examples/: main.cpp
scripts/: compare_data_layout.py  convert_codec_to_gguf.py  convert_magpie_to_gguf.py  dump_attn_out.py  dump_decoder_reference.py  dump_ffn_reference.py  dump_local_transformer_reference.py  dump_multiframe_codes.py  dump_reference.py  inspect_codec.py  trace_decoder_input.py  trace_decoder_output.py  trace_encoder_output.py  trace_self_attention.py  verify_ffn_causal.py  verify_layer1_exact.py
src/: magpie-codec.cpp  magpie.cpp  magpie.h  nano-codec.cpp
tests/: debug_attention.cpp  debug_conv_ffn.cpp  debug_encoder_layers.cpp  debug_final.cpp  debug_head11.cpp  debug_head11_sum.cpp  debug_heads.cpp  debug_layer1.cpp  debug_layer1_parts.cpp  debug_layout.cpp  debug_o_proj.cpp  debug_trace.cpp  debug_weight.cpp  test_attn_step.cpp  test_audio_embedding.cpp  test_codec_decode.cpp  test_codec_fsq.cpp  test_codec_load.cpp  test_conv_ffn.cpp  test_decoder_debug.cpp  test_decoder_input.cpp  test_decoder_layer.cpp  test_decoder_weights.cpp  test_e2e_cached.cpp  test_e2e_inference.cpp  test_e2e_optimized.cpp  test_encoder_fresh.cpp  test_encoder_layer.cpp  test_encoder_layer_n.cpp  test_final_proj.cpp  test_full_decoder.cpp  test_full_encoder.cpp  test_full_encoder_v2.cpp  test_graph_reuse.cpp  test_layer_norm.cpp  test_layer_step.cpp  (+9 more)
